--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<style type="text/css">
 		body{
 			font-family: sans-serif;
+			background-color: lightgreen;
 		}
 		.container{
 			display: flex;
@@ -14,6 +15,7 @@
 		h1{
 			color: red;
 		}
+
 	</style>
 </head>
 <body>
