--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<style type="text/css">
 		body{
 			font-family: sans-serif;
-			background-color: lightgreen;
+			background-color: pink;
 		}
 		.container{
 			display: flex;
